--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "Let's see what does this package amount to in future",
-  "main": "App.js",
   "scripts": {
     "test": "jest, maybe"
   },
@@ -17,6 +16,11 @@
   },
   "homepage": "https://github.com/yashsayhey/namaste-react#readme",
   "devDependencies": {
-    "parcel": "^2.9.3"
+    "parcel": "^2.9.3",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
