--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "namaste-react",
+  "name": "food-ordering-app",
   "version": "1.0.0",
   "description": "Let's see what does this package amount to in future",
   "scripts": {
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yashsayhey/namaste-react.git"
+    "url": "git+https://github.com/yashsayhey/Food-Ordering-App.git"
   },
   "author": "Yash Mishra (eleven011)",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yashsayhey/namaste-react/issues"
+    "url": "https://github.com/yashsayhey/Food-Ordering-App/issues"
   },
-  "homepage": "https://github.com/yashsayhey/namaste-react#readme",
+  "homepage": "https://github.com/yashsayhey/Food-Ordering-App#readme",
   "devDependencies": {
     "parcel": "^2.9.3",
     "process": "^0.11.10"
